Fixed multiple lined tags fields overlapping the siblings (fixes #414)

--- a/themes/grav/scss/template/_forms.scss
+++ b/themes/grav/scss/template/_forms.scss
@@ -103,7 +103,7 @@ form {
     }
 
     .selectize-control {
-        height: 39px;
+        min-height: 39px;
     }
 
     .selectize-input {
